--- a/resources/admin/index.html
+++ b/resources/admin/index.html
@@ -11,6 +11,6 @@
   </head>
   <body>
     <div id="app"></div>
-    <script type="module" src="/src/core/main.ts"></script>
+    <script type="module" src="/src/core/%VITE_APP_LIVE_SCRIPT%.ts"></script>
   </body>
 </html>
