--- a/resources/admin/index.html
+++ b/resources/admin/index.html
@@ -2,15 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <link rel="icon" href="/favicon.ico">
-    <link rel="media" href="/404.png">
-    <link rel="media" href="/logo.png">
-    <link rel="media" href="/og_image.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Panda WP</title>
   </head>
   <body>
     <div id="app"></div>
-    <script type="module" src="/src/core/%VITE_APP_LIVE_SCRIPT%.ts"></script>
+    <script type="module" src="/src/core/%VITE_APP_LIVE_VIEW%.ts"></script>
   </body>
 </html>
